option('debug-damage-tracking', type: 'boolean', value: 'false', description: 'Debug damage tracking')
option('man-pages', type: 'feature', value: 'auto', description: 'Generate and install man pages')
option('xwayland', type: 'boolean', value: 'false', description: 'Enable support for X11 applications')
